--- a/cssF.Css
+++ b/cssF.Css
@@ -3,7 +3,7 @@ body{
   margin:0;
   padding:0;
   font-weight: bold;
-  font-size:12px;
+  font-size:24px;
   font-family:Verdana, Charcoal, sans-serif;
   background-color: #dcdcdc;
   color: #dcdcdc;
@@ -27,15 +27,16 @@ nav li{
   display: inline;
 }
 /*nav bar link colors*/
+/*
 a.linkNav{
   color:#dcdcdc;
-}
+} */
 a.linkNav:link{
-  color:#dcdcdc;
+  color:#D6DA4D;
   text-decoration: none;
 }
 a.linkNav:visited{
-  color:#dcdcdc;
+  color:#D6DA4D;
 }
 a.linkNav:hover{
   color:#ffffff;
@@ -43,18 +44,13 @@ a.linkNav:hover{
 
 
 main{
-  background-color:#3b444b;
+  background-color:#161616;
   padding: 10px 25px;
   text-align: center;
   vertical-align: middle;
   min-height: 2000px;
 }
-/*the "main" size */
-.whole_page{
-margin-left: auto;
-margin-right: auto;
-width: 800px;
-}
+
 /*bottom of the page*/
 footer{
     background-color:#000000;
