--- a/cssF.css
+++ b/cssF.css
@@ -26,7 +26,7 @@ nav li{
   padding: 0px 3%;
   display: inline;
 }
-/*nav bar link colors haha*/
+/*nav bar link colors*/
 /*
 a.linkNav{
   color:#dcdcdc;
