--- a/cssF.css
+++ b/cssF.css
@@ -17,20 +17,36 @@ header{
   justify-content: space-between;
   padding: 1px 10%;
 }
+/*page */
+main{
+  background-color:#161616;
+  padding: 10px 25px;
+  text-align: center;
+  vertical-align: middle;
+  min-height: 2000px;
+}
+/*bottom of the page*/
+footer{
+    background-color:#000000;
+    padding: 40px 80px
+}
+
 /*nav buttons*/
 li{
   list-style: none;/**/
 }
 nav li{
   list-style: none;
-  padding: 0px 3%;
+  padding: 80px;
   display: inline;
 }
 /*nav bar link colors*/
-/*
+
 a.linkNav{
   color:#dcdcdc;
-} */
+  transition-duration: 350ms;
+  transition-property: color;/*change to background later when image is in place of text*/
+}
 a.linkNav:link{
   color:#D6DA4D;
   text-decoration: none;
@@ -41,34 +57,39 @@ a.linkNav:visited{
 a.linkNav:hover{
   color:#ffffff;
 }
+/*products*/
+.card_container{
+display: flex;
+flex-direction: row;
+justify-content: center;
+flex-flow:  wrap;
 
 
-main{
-  background-color:#161616;
-  padding: 10px 25px;
-  text-align: center;
-  vertical-align: middle;
-  min-height: 2000px;
 }
+.card{
+background-color:#161616;
+width: 250px;
+height: 400px;
 
-/*bottom of the page*/
-footer{
-    background-color:#000000;
-    padding: 40px 80px
+  border:2px solid #D6DA4D;
+  transition: border 350ms;
 }
+.card:hover{
+border: 8px  solid #ffffff;
+}
+.card_margin{
+margin: 5px;
+width: 260px;
+height: 410px;
+}
+.card_image{
 
-
-/*link1 colors*/
-a.link1{
-  color:#dcdcdc;
+background-color: violet;
+width: 100%;
+height: 250px;
 }
-a.link1:link{
-  color:#dcdcdc;
-  text-decoration: none;
-}
-a.link1:visited{
-  color:#dcdcdc;
-}
-a.link1:hover{
-  color:#ffffff;
+.card_info{
+font-size: 12px;
+max-width: 250px;
+height: 80px;
 }
